apps/tangent-electron/src/app/style/note.scss
/* ... */
// Options
.margins-tight article.note {
	padding: .5em;

	h1, h2, h3 {
		&.line {
			margin-bottom: 0;
		}
	}
}

.margins-relaxed article.note {
	padding: 2em 3em;

	h1, h2, h3 {
		&.line:not(:first-child) {
			margin-top: rhythmUnit(1);
		}
	}

	.horizontal_rule {
		margin-top: rhythmUnit(1);
		margin-bottom: rhythmUnit(1);
	}
}

.hangingHeaders article.note {
	.line {
		padding-left: fontUnit(.5);
	}
	h1.line, h2.line, h3.line {
		padding: 0;
	}

	// Oh dear…
	p.list .list:not(.revealed):after {
		left: calc(-1 * var(--indentWidth) + .5em);
	}
}

// I might want to move this elsewhere
t-link {
	position: relative;

	&[link-state="resolved"] {
		color: var(--accentTextColor);
	}
	&[link-state="empty"], &[link-state="ambiguous"] {
		color: var(--emptyLinkTextColor);
	}
	&[link-state="external"] {
		color: var(--externalLinkColor);
	}
	&[link-state="untracked"] {
		color: var(--untrackedLinkColor);
	}

	.link_internal {
		//text-decoration: underline;
		&:not(.start):not(.end) {
			color: inherit;
		}
		
		&.hidden.revealed {
			color: inherit;
		}

		&.hashtag {
			font-size: 0;
			line-height: 0;
			&.revealed {
				font-size: unset;
				line-height: unset;
				padding: 0 .2em;
			}
		}

		&.id.name:not(.hidden):not(.revealed)::before {
			content: '→';
			padding: 0 .2em;
		}
	}

	.revealed, :not(.hidden) {
		&.start, &.end {
			font-size: 50%;
			position: relative;
			top: -.05em;
			line-height: 50%;
		}
	}
}

.meta-pressed, .ctrl-pressed, .no-mod-link-click {
	t-link, t-embed {
		cursor: pointer;

		&:hover, &.revealed {
			.link_internal {
				text-decoration: underline;
			}
		}
	}
	.tagSection:hover {
		cursor: pointer;
		text-decoration: underline;
	}

	&.link-cursor-arrow {
		t-link, t-embed {
			cursor: default;
		}
	}

	&.link-cursor-directional {
		t-link, t-embed {
			cursor: e-resize;
		}
		&.link-click-pane-new.shift-pressed, &.link-click-pane-replace:not(.shift-pressed) {
			t-link, t-embed {
				cursor: pointer;
			}
		}
		&.alt-pressed {
			t-link, t-embed {
				// TODO: This is a gross important, but leaving it for now
				cursor: w-resize !important;
			}
		}
	}
}

t-embed {
	&[link-state="error"] {
		color: var(--emptyLinkTextColor);

		.hidden {
			color: var(--emptyLinkTextColor);
			font-size: unset;
			line-height: unset;
			tab-size: unset;
		}
	}
}

.dark article.note pre {
	background: #111;
}

